@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-08T16:23:45Z",
-  "count" : 7,
-  "count_minmax" : [ 0, 7 ],
+  "timestamp" : "2022-05-09T01:39:17Z",
+  "count" : 9,
+  "count_minmax" : [ 0, 9 ],
   "count_prev_day_inc" : 27,
   "count_prev_day_dec" : 0,
-  "uniques" : 4,
-  "uniques_minmax" : [ 0, 4 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 0, 5 ],
   "uniques_prev_day_inc" : 9,
   "uniques_prev_day_dec" : 0
 }
