@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T16:23:45Z",
+  "timestamp" : "2022-05-09T01:39:17Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 233,
-  "uniques" : 142,
+  "count" : 235,
+  "uniques" : 143,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 0, 7 ],
-      "uniques": 4,
-      "uniques_minmax": [ 0, 4 ]
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 5,
+      "uniques_minmax": [ 0, 5 ]
     }
   ]
 }
