@@ -1,5 +1,5 @@
 {
-  "count": 95,
+  "count": 97,
   "uniques": 20,
   "clones": [
     {
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 7,
-      "uniques": 4
+      "count": 9,
+      "uniques": 5
     }
   ]
 }
